<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".categorias_emp">

    <FrameLayout
        android:layout_width="394dp"
        android:layout_height="155dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:id="@+id/txt_cosmeticos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/alimentos" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="107dp"
            android:layout_height="83dp"
            android:background="@drawable/food"
            android:contentDescription="@string/avatar"
            app:srcCompat="@drawable/food" />

        <ImageView
            android:id="@+id/chv"
            android:layout_width="72dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:background="@drawable/chevron"
            android:contentDescription="@string/avatar"
            android:onClick="irACrearAnuncio"
            app:srcCompat="@drawable/chevron" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="392dp"
        android:layout_height="138dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_gravity="end"
            android:background="@drawable/avataar"
            android:contentDescription="@string/avatar"
            app:srcCompat="@drawable/avataar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:onClick="cerrarSesion"
            android:text="@string/cerrarsesion"
            android:translationX="-15sp" />

        <TextView
            android:id="@+id/txt_alimentos1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/categorias"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="111dp"
            android:layout_height="113dp"
            android:onClick="irACrearAnuncio"
            android:text="@string/publicacion" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>