<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crear_cuenta">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/id_toobar"
        app:title="CREAR NUEVA CUENTA"
        android:background="@color/design_default_color_primary"
        app:titleTextColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="?actionBarSize"
        >
    </androidx.appcompat.widget.Toolbar>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:weightSum="1"
            >
            <TextView
                android:layout_weight="0.5"
                android:gravity="center"
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/nombrePyme"
                />
            <EditText
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:id="@+id/txt_nombrecc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >

            <TextView
                android:gravity="center"
                android:layout_weight="0.5"
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contraseñac" />

            <EditText
                android:layout_weight="0.5"
                android:id="@+id/txt_contrasenacc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="10"
                android:hint="@string/contraseñac"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textView9"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/confcontraseñac"
                android:layout_weight="0.5"/>

            <EditText
                android:id="@+id/txt_confContrasena"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/confcontraseñac"
                android:inputType="textPassword"
                android:layout_weight="0.5"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textView10"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correop"
                android:layout_weight="0.5"
                />

            <EditText
                android:id="@+id/txt_correocc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"
                android:layout_weight="0"/>

        </androidx.appcompat.widget.LinearLayoutCompat>






        <RadioGroup
            android:gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <RadioButton
                android:id="@+id/rb_persona"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:text="@string/persona" />

            <RadioButton
                android:id="@+id/rb_empresa"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:text="@string/empresa" />
        </RadioGroup>


        <Button
            android:gravity="center"
            android:id="@+id/btn_crear_cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/crear"
            />




    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.coordinatorlayout.widget.CoordinatorLayout>