<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detalle">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="393dp"
        android:layout_height="141dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_alimentos1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tituloFruitsal"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="54dp"
            android:onClick="volverAAlimentos"
            android:rotationY="180"
            app:srcCompat="@drawable/chevron" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="135dp"
        android:layout_height="126dp"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:srcCompat="@drawable/fruitsal"
        tools:layout_editor_absoluteX="129dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="328dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:text="@string/dfruitsal"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/contactanos"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="46dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/web"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="150dp" />
</androidx.constraintlayout.widget.ConstraintLayout>