<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".borrar">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="392dp"
        android:layout_height="138dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_gravity="end"
            android:background="@drawable/avataar"
            android:contentDescription="@string/avatar"
            app:srcCompat="@drawable/avataar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:onClick="cerrarSesion"
            android:text="@string/cerrarsesion"
            android:translationX="-15sp" />

        <TextView
            android:id="@+id/txt_alimentos1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Borrar"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="54dp"
            android:contentDescription="@string/avatar"
            android:onClick="volverAMostrarPublicaciones"
            android:rotationY="180"
            app:srcCompat="@drawable/chevron" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView31"
        android:layout_width="358dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/textBorrar"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <EditText
        android:id="@+id/et_nombre_borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:onClick="borrarPublicacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="48dp"
        android:text="@string/Borrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre_borrar" />
</androidx.constraintlayout.widget.ConstraintLayout>