<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recuperar">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="393dp"
        android:layout_height="141dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_alimentos1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Bienvenidos"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="46dp"
            android:layout_height="60dp"
            android:onClick="volverAlInicio"
            android:rotationY="180"
            app:srcCompat="@drawable/chevron" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:srcCompat="@drawable/msje"
        tools:layout_editor_absoluteX="113dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/recuperar"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        tools:layout_editor_absoluteX="79dp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_editor_absoluteX="79dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/enviar"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
        tools:layout_editor_absoluteX="138dp" />
</androidx.constraintlayout.widget.ConstraintLayout>