<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Header">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_gravity="end"
                android:background="@drawable/avataar"
                android:contentDescription="@string/avatar"
                android:translationX="-15sp"
                android:translationY="10sp"
                app:srcCompat="@drawable/avataar" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:onClick="cerrarSesion"
                android:text="@string/cerrarsesion"
                android:translationX="-5sp"
                android:translationY="20sp" />

            <TextView
                android:id="@+id/txt_alimentos1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/actualizar"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="54dp"
                android:contentDescription="@string/avatar"
                android:onClick="irAMostrarPublicaciones"
                android:rotationY="180"
                app:srcCompat="@drawable/chevron" />

        </FrameLayout>


    </LinearLayout>
</FrameLayout>